# worldoftoilets

./: .env.example  .gitignore  LICENCE.md  README-milestone-1.md  README.md  SERVICES.md  docker-compose.db-dev.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/ai/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  preload_graph.py  pyproject.toml
apps/ai/src/: __init__.py  app.py
apps/ai/src/api/: routes.py  test_runner.py
apps/ai/src/core/: config.py  route_engine.py
apps/ai/src/utils/: exceptions.py  logger.py
apps/ai/tests/: __init__.py  test_example.py
apps/api/: Dockerfile  Dockerfile.dev  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/common/decorators/: full-user.decorator.ts  index.ts  requires-permissions.decorator.ts  user.decorator.ts
apps/api/src/config/: index.ts  mikroorm.config.ts  swagger.config.ts
apps/app/: local.properties.example  settings.gradle.kts
apps/app/app/: build.gradle.kts
apps/app/gradle/: libs.versions.toml
apps/app/gradle/wrapper/: gradle-wrapper.properties
apps/old-api/: Dockerfile  pom.xml
apps/route-viewer/: index.html
apps/web/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
apps/web/src/: proxy.ts
db/: diagram.excalidraw
db/haproxy/: haproxy.cfg
db/old-scripts/: 01-create.sql  02-populate.sql
db/scripts/: 01-create.sql  02-insert.sql  98-queries.sql  99-drop-tables.sql
minio/init-data/: init-minio.sh
nginx/: nginx-dev.conf  nginx.conf
(+403 files in other folders)
